CSS fix for erroneous page horizontal scrolling

--- a/css/base.css
+++ b/css/base.css
@@ -5,6 +5,7 @@
 
 html {
   background-color: #F2F2F2;
+  overflow-x: hidden;
 }
 
 body {
